--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require": {
         "php": "^7.1|^8.0",
         "illuminate/database": "^7.0|^8.0",
-        "illuminate/support": "^7.0|^8.0",
-        "laravel/helpers": "^1.0"
+        "illuminate/support": "*",
+        "laravel/helpers": "*"
     },
     "license": "MIT",
     "homepage": "https://github.com/sailingbyte/laravel-full-calendar",
