--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": "^7.1|^8.0",
-        "illuminate/database": "^7.0|^8.0",
-        "illuminate/support": "*",
-        "laravel/helpers": "*"
+        "illuminate/database": "^7.0|^8.0|^9.0",
+        "illuminate/support": "^7.0|^8.0|^9.0",
+        "laravel/helpers": "^1.5"
     },
     "license": "MIT",
     "homepage": "https://github.com/sailingbyte/laravel-full-calendar",
