--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "php": "^7.1|^8.0",
-        "illuminate/database": "^7.0|^8.0|^9.0",
-        "illuminate/support": "^7.0|^8.0|^9.0",
+        "php": "^7.1|^8.0|^8.2",
+        "illuminate/database": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
         "laravel/helpers": "^1.5"
     },
     "license": "MIT",
